// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Python Writer Generator generates Patient resource in inMemoryOnly mode with snapshot 1`] = `
"# WARNING: This file is autogenerated by @atomic-ehr/codegen.
# GitHub: https://github.com/atomic-ehr/codegen
# Any manual changes made to this file may be overwritten.

from __future__ import annotations
from pydantic import BaseModel, ConfigDict, Field, PositiveInt
from typing import List as PyList, Literal

from fhir_types.hl7_fhir_r4_core.base import (\\
    Address, Attachment, BackboneElement, CodeableConcept, ContactPoint, HumanName, Identifier, Period, Reference
)
from fhir_types.hl7_fhir_r4_core.domain_resource import DomainResource
from fhir_types.hl7_fhir_r4_core.resource_families import DomainResourceFamily


class PatientCommunication(BackboneElement):
    model_config = ConfigDict(validate_by_name=True, serialize_by_alias=True, extra="forbid")
    language: CodeableConcept[Literal["ar", "bn", "cs", "da", "de", "de-AT", "de-CH", "de-DE", "el", "en", "en-AU", "en-CA", "en-GB", "en-IN", "en-NZ", "en-SG", "en-US", "es", "es-AR", "es-ES", "es-UY", "fi", "fr", "fr-BE", "fr-CH", "fr-FR", "fy", "fy-NL", "hi", "hr", "it", "it-CH", "it-IT", "ja", "ko", "nl", "nl-BE", "nl-NL", "no", "no-NO", "pa", "pl", "pt", "pt-BR", "ru", "ru-RU", "sr", "sr-RS", "sv", "sv-SE", "te", "zh", "zh-CN", "zh-HK", "zh-SG", "zh-TW"] | str] = Field(alias="language", serialization_alias="language")
    preferred: bool | None = Field(None, alias="preferred", serialization_alias="preferred")

class PatientContact(BackboneElement):
    model_config = ConfigDict(validate_by_name=True, serialize_by_alias=True, extra="forbid")
    address: Address | None = Field(None, alias="address", serialization_alias="address")
    gender: Literal["male", "female", "other", "unknown"] | None = Field(None, alias="gender", serialization_alias="gender")
    name: HumanName | None = Field(None, alias="name", serialization_alias="name")
    organization: Reference | None = Field(None, alias="organization", serialization_alias="organization")
    period: Period | None = Field(None, alias="period", serialization_alias="period")
    relationship: PyList[CodeableConcept] | None = Field(None, alias="relationship", serialization_alias="relationship")
    telecom: PyList[ContactPoint] | None = Field(None, alias="telecom", serialization_alias="telecom")

class PatientLink(BackboneElement):
    model_config = ConfigDict(validate_by_name=True, serialize_by_alias=True, extra="forbid")
    other: Reference = Field(alias="other", serialization_alias="other")
    type: Literal["replaced-by", "replaces", "refer", "seealso"] = Field(alias="type", serialization_alias="type")


class Patient(DomainResource):
    model_config = ConfigDict(validate_by_name=True, serialize_by_alias=True, extra="forbid")
    resource_type: Literal['Patient'] = Field(
        default='Patient',
        alias='resourceType',
        serialization_alias='resourceType',
        frozen=True,
        pattern='Patient'
    )
    active: bool | None = Field(None, alias="active", serialization_alias="active")
    address: PyList[Address] | None = Field(None, alias="address", serialization_alias="address")
    birth_date: str | None = Field(None, alias="birthDate", serialization_alias="birthDate")
    communication: PyList[PatientCommunication] | None = Field(None, alias="communication", serialization_alias="communication")
    contact: PyList[PatientContact] | None = Field(None, alias="contact", serialization_alias="contact")
    deceased_boolean: bool | None = Field(None, alias="deceasedBoolean", serialization_alias="deceasedBoolean")
    deceased_date_time: str | None = Field(None, alias="deceasedDateTime", serialization_alias="deceasedDateTime")
    gender: Literal["male", "female", "other", "unknown"] | None = Field(None, alias="gender", serialization_alias="gender")
    general_practitioner: PyList[Reference] | None = Field(None, alias="generalPractitioner", serialization_alias="generalPractitioner")
    identifier: PyList[Identifier] | None = Field(None, alias="identifier", serialization_alias="identifier")
    link: PyList[PatientLink] | None = Field(None, alias="link", serialization_alias="link")
    managing_organization: Reference | None = Field(None, alias="managingOrganization", serialization_alias="managingOrganization")
    marital_status: CodeableConcept[Literal["A", "D", "I", "L", "M", "P", "S", "T", "U", "W", "UNK"] | str] | None = Field(None, alias="maritalStatus", serialization_alias="maritalStatus")
    multiple_birth_boolean: bool | None = Field(None, alias="multipleBirthBoolean", serialization_alias="multipleBirthBoolean")
    multiple_birth_integer: int | None = Field(None, alias="multipleBirthInteger", serialization_alias="multipleBirthInteger")
    name: PyList[HumanName] | None = Field(None, alias="name", serialization_alias="name")
    photo: PyList[Attachment] | None = Field(None, alias="photo", serialization_alias="photo")
    telecom: PyList[ContactPoint] | None = Field(None, alias="telecom", serialization_alias="telecom")

    def to_json(self, indent: int | None = None, by_alias: bool = False, exclude_unset: bool = True) -> str:
        return self.model_dump_json(by_alias=by_alias, exclude_unset=exclude_unset, exclude_none=True, indent=indent)

    @classmethod
    def from_json(cls, json: str) -> Patient:
        return cls.model_validate_json(json)

"
`;

exports[`Python Writer Generator static files 1`] = `
"fhirpy>=2.0.0,<3.0.0
mypy>=1.9.0,<2.0.0
pydantic>=2.11.0,<3.0.0
pytest>=8.3.0,<9.0.0
pytest-asyncio>=0.24.0,<1.0.0
requests>=2.32.0,<3.0.0
types-requests>=2.32.0,<3.0.0
"
`;

exports[`Python R4 Example (with generateProfile) generates bodyweight profile with validate() 1`] = `
"# WARNING: This file is autogenerated by @atomic-ehr/codegen.
# GitHub: https://github.com/atomic-ehr/codegen
# Any manual changes made to this file may be overwritten.

from __future__ import annotations

from typing import Any

from fhir_types.hl7_fhir_r4_core.observation import Observation
from fhir_types.hl7_fhir_r4_core.base import CodeableConcept, Period, Quantity, Reference
from .profile_helpers import (
    build_resource,
    ensure_profile,
    ensure_slice_defaults,
    apply_slice_match,
    get_array_slice,
    matches_value,
    set_array_slice,
    strip_match_keys,
    validate_choice_required,
    validate_enum,
    validate_fixed_value,
    validate_must_support,
    validate_reference,
    validate_required,
    validate_slice_cardinality,
)


class ObservationBodyweightProfile:
    """FHIR Body Weight Profile

    CanonicalURL: http://hl7.org/fhir/StructureDefinition/bodyweight
    """

    canonical_url: str = "http://hl7.org/fhir/StructureDefinition/bodyweight"

    _vscat_slice_match: dict = {"coding":[{"code":"vital-signs","system":"http://terminology.hl7.org/CodeSystem/observation-category"}]}

    def __init__(self, resource: Observation) -> None:
        self._resource = resource

    @classmethod
    def from_resource(cls, resource: Observation) -> "ObservationBodyweightProfile":
        meta = getattr(resource, "meta", None)
        profiles = getattr(meta, "profile", None) if meta is not None else None
        if profiles is None or cls.canonical_url not in profiles:
            raise ValueError(f"ObservationBodyweightProfile: meta.profile must include {cls.canonical_url}")
        profile = cls(resource)
        result = profile.validate()
        if result["errors"]:
            raise ValueError("; ".join(result["errors"]))
        return profile

    @classmethod
    def apply(cls, resource: Observation) -> "ObservationBodyweightProfile":
        ensure_profile(resource, cls.canonical_url)
        return cls(resource)

    @classmethod
    def create_resource(cls, *, category: list[CodeableConcept] | None = None, status: str, subject: Reference) -> Observation:
        category_with_defaults = ensure_slice_defaults(list(category or []), cls._vscat_slice_match)

        return build_resource(
            Observation,
            resource_type="Observation",
            code={"coding":[{"code":"29463-7","system":"http://loinc.org"}]},
            category=category_with_defaults,
            status=status,
            subject=subject,
            meta={"profile": [cls.canonical_url]},
        )

    @classmethod
    def create(cls, *, category: list[CodeableConcept] | None = None, status: str, subject: Reference) -> "ObservationBodyweightProfile":
        return cls.apply(cls.create_resource(category=category, status=status, subject=subject))

    def to_resource(self) -> Observation:
        return self._resource

    def get_status(self) -> str | None:
        return getattr(self._resource, "status", None)

    def set_status(self, value: str) -> "ObservationBodyweightProfile":
        setattr(self._resource, "status", value)
        return self

    def get_subject(self) -> Reference | None:
        return getattr(self._resource, "subject", None)

    def set_subject(self, value: Reference) -> "ObservationBodyweightProfile":
        setattr(self._resource, "subject", value)
        return self

    def get_category(self) -> list[CodeableConcept] | None:
        return getattr(self._resource, "category", None)

    def set_category(self, value: list[CodeableConcept]) -> "ObservationBodyweightProfile":
        setattr(self._resource, "category", value)
        return self

    def get_code(self) -> CodeableConcept | None:
        return getattr(self._resource, "code", None)

    def set_code(self, value: CodeableConcept) -> "ObservationBodyweightProfile":
        setattr(self._resource, "code", value)
        return self

    def get_effective_date_time(self) -> str | None:
        return getattr(self._resource, "effective_date_time", None)

    def set_effective_date_time(self, value: str) -> "ObservationBodyweightProfile":
        setattr(self._resource, "effective_date_time", value)
        return self

    def get_effective_period(self) -> Period | None:
        return getattr(self._resource, "effective_period", None)

    def set_effective_period(self, value: Period) -> "ObservationBodyweightProfile":
        setattr(self._resource, "effective_period", value)
        return self

    def get_value_quantity(self) -> Quantity | None:
        return getattr(self._resource, "value_quantity", None)

    def set_value_quantity(self, value: Quantity) -> "ObservationBodyweightProfile":
        setattr(self._resource, "value_quantity", value)
        return self

    def get_vscat(self, mode: str | None = None) -> Any | None:
        match = self.__class__._vscat_slice_match
        item = get_array_slice(getattr(self._resource, "category", None), match)
        if item is None:
            return None
        if mode == "raw":
            return item
        item_dict = item if isinstance(item, dict) else item.model_dump(by_alias=True, exclude_none=True)
        return strip_match_keys(item_dict, ["coding"])

    def set_vscat(self, value: dict | None = None) -> "ObservationBodyweightProfile":
        match = self.__class__._vscat_slice_match
        merged = apply_slice_match((value or {}), match)
        merged = CodeableConcept(**merged)
        items = getattr(self._resource, "category", None) or []
        set_array_slice(items, match, merged)
        setattr(self._resource, "category", items)
        return self

    def validate(self) -> dict[str, list[str]]:
        profile_name = "ObservationBodyweightProfile"
        errors: list[str] = []
        warnings: list[str] = []
        errors.extend(validate_required(self._resource, profile_name, "status"))
        errors.extend(validate_enum(self._resource, profile_name, "status", ["registered","preliminary","final","amended","corrected","cancelled","entered-in-error","unknown"]))
        errors.extend(validate_required(self._resource, profile_name, "category"))
        errors.extend(validate_slice_cardinality(self._resource, profile_name, "category", {"coding":{"code":"vital-signs","system":"http://terminology.hl7.org/CodeSystem/observation-category"}}, "VSCat", 1, 1))
        errors.extend(validate_required(self._resource, profile_name, "code"))
        errors.extend(validate_fixed_value(self._resource, profile_name, "code", {"coding":[{"code":"29463-7","system":"http://loinc.org"}]}))
        errors.extend(validate_required(self._resource, profile_name, "subject"))
        errors.extend(validate_reference(self._resource, profile_name, "subject", ["Patient"]))
        errors.extend(validate_choice_required(self._resource, profile_name, ["effective_date_time","effective_period"]))
        errors.extend(validate_reference(self._resource, profile_name, "has_member", ["MolecularSequence","QuestionnaireResponse","Observation"]))
        errors.extend(validate_reference(self._resource, profile_name, "derived_from", ["DocumentReference","ImagingStudy","Media","MolecularSequence","QuestionnaireResponse","Observation"]))
        warnings.extend(validate_enum(self._resource, profile_name, "category", ["social-history","vital-signs","imaging","laboratory","procedure","survey","exam","therapy","activity"]))
        warnings.extend(validate_enum(self._resource, profile_name, "code", ["85353-1","9279-1","8867-4","2708-6","8310-5","8302-2","9843-4","29463-7","39156-5","85354-9","8480-6","8462-4","8478-0"]))
        warnings.extend(validate_enum(self._resource, profile_name, "data_absent_reason", ["unknown","asked-unknown","temp-unknown","not-asked","asked-declined","masked","not-applicable","unsupported","as-text","error","not-a-number","negative-infinity","positive-infinity","not-performed","not-permitted"]))
        warnings.extend(validate_must_support(self._resource, profile_name, "data_absent_reason"))
        return {"errors": errors, "warnings": warnings}

"
`;

exports[`Python R4 Example (with generateProfile) generates bp profile with validate() 1`] = `
"# WARNING: This file is autogenerated by @atomic-ehr/codegen.
# GitHub: https://github.com/atomic-ehr/codegen
# Any manual changes made to this file may be overwritten.

from __future__ import annotations

from typing import Any

from fhir_types.hl7_fhir_r4_core.observation import Observation
from fhir_types.hl7_fhir_r4_core.base import CodeableConcept, Period, Quantity, Reference
from fhir_types.hl7_fhir_r4_core.observation import ObservationComponent
from .profile_helpers import (
    build_resource,
    ensure_profile,
    ensure_slice_defaults,
    apply_slice_match,
    get_array_slice,
    matches_value,
    set_array_slice,
    strip_match_keys,
    wrap_slice_choice,
    unwrap_slice_choice,
    validate_choice_required,
    validate_enum,
    validate_fixed_value,
    validate_must_support,
    validate_reference,
    validate_required,
    validate_slice_cardinality,
)


class ObservationBpProfile:
    """FHIR Blood Pressure Profile

    CanonicalURL: http://hl7.org/fhir/StructureDefinition/bp
    """

    canonical_url: str = "http://hl7.org/fhir/StructureDefinition/bp"

    _vscat_slice_match: dict = {"coding":[{"code":"vital-signs","system":"http://terminology.hl7.org/CodeSystem/observation-category"}]}
    _systolic_bp_slice_match: dict = {"code":{"coding":[{"code":"8480-6","system":"http://loinc.org"}]}}
    _diastolic_bp_slice_match: dict = {"code":{"coding":[{"code":"8462-4","system":"http://loinc.org"}]}}

    def __init__(self, resource: Observation) -> None:
        self._resource = resource

    @classmethod
    def from_resource(cls, resource: Observation) -> "ObservationBpProfile":
        meta = getattr(resource, "meta", None)
        profiles = getattr(meta, "profile", None) if meta is not None else None
        if profiles is None or cls.canonical_url not in profiles:
            raise ValueError(f"ObservationBpProfile: meta.profile must include {cls.canonical_url}")
        profile = cls(resource)
        result = profile.validate()
        if result["errors"]:
            raise ValueError("; ".join(result["errors"]))
        return profile

    @classmethod
    def apply(cls, resource: Observation) -> "ObservationBpProfile":
        ensure_profile(resource, cls.canonical_url)
        return cls(resource)

    @classmethod
    def create_resource(cls, *, category: list[CodeableConcept] | None = None, component: list[BackboneElement] | None = None, status: str, subject: Reference) -> Observation:
        category_with_defaults = ensure_slice_defaults(list(category or []), cls._vscat_slice_match)
        component_with_defaults = ensure_slice_defaults(
            list(component or []),
            cls._systolic_bp_slice_match,
            cls._diastolic_bp_slice_match,
        )

        return build_resource(
            Observation,
            resource_type="Observation",
            code={"coding":[{"code":"85354-9","system":"http://loinc.org"}]},
            category=category_with_defaults,
            component=component_with_defaults,
            status=status,
            subject=subject,
            meta={"profile": [cls.canonical_url]},
        )

    @classmethod
    def create(cls, *, category: list[CodeableConcept] | None = None, component: list[BackboneElement] | None = None, status: str, subject: Reference) -> "ObservationBpProfile":
        return cls.apply(cls.create_resource(category=category, component=component, status=status, subject=subject))

    def to_resource(self) -> Observation:
        return self._resource

    def get_status(self) -> str | None:
        return getattr(self._resource, "status", None)

    def set_status(self, value: str) -> "ObservationBpProfile":
        setattr(self._resource, "status", value)
        return self

    def get_subject(self) -> Reference | None:
        return getattr(self._resource, "subject", None)

    def set_subject(self, value: Reference) -> "ObservationBpProfile":
        setattr(self._resource, "subject", value)
        return self

    def get_category(self) -> list[CodeableConcept] | None:
        return getattr(self._resource, "category", None)

    def set_category(self, value: list[CodeableConcept]) -> "ObservationBpProfile":
        setattr(self._resource, "category", value)
        return self

    def get_code(self) -> CodeableConcept | None:
        return getattr(self._resource, "code", None)

    def set_code(self, value: CodeableConcept) -> "ObservationBpProfile":
        setattr(self._resource, "code", value)
        return self

    def get_component(self) -> list[BackboneElement] | None:
        return getattr(self._resource, "component", None)

    def set_component(self, value: list[BackboneElement]) -> "ObservationBpProfile":
        setattr(self._resource, "component", value)
        return self

    def get_effective_date_time(self) -> str | None:
        return getattr(self._resource, "effective_date_time", None)

    def set_effective_date_time(self, value: str) -> "ObservationBpProfile":
        setattr(self._resource, "effective_date_time", value)
        return self

    def get_effective_period(self) -> Period | None:
        return getattr(self._resource, "effective_period", None)

    def set_effective_period(self, value: Period) -> "ObservationBpProfile":
        setattr(self._resource, "effective_period", value)
        return self

    def get_value_quantity(self) -> Quantity | None:
        return getattr(self._resource, "value_quantity", None)

    def set_value_quantity(self, value: Quantity) -> "ObservationBpProfile":
        setattr(self._resource, "value_quantity", value)
        return self

    def get_vscat(self, mode: str | None = None) -> Any | None:
        match = self.__class__._vscat_slice_match
        item = get_array_slice(getattr(self._resource, "category", None), match)
        if item is None:
            return None
        if mode == "raw":
            return item
        item_dict = item if isinstance(item, dict) else item.model_dump(by_alias=True, exclude_none=True)
        return strip_match_keys(item_dict, ["coding"])

    def get_systolic_bp(self, mode: str | None = None) -> Any | None:
        match = self.__class__._systolic_bp_slice_match
        item = get_array_slice(getattr(self._resource, "component", None), match)
        if item is None:
            return None
        if mode == "raw":
            return item
        item_dict = item if isinstance(item, dict) else item.model_dump(by_alias=True, exclude_none=True)
        return unwrap_slice_choice(item_dict, ["code"], "valueQuantity")

    def get_diastolic_bp(self, mode: str | None = None) -> Any | None:
        match = self.__class__._diastolic_bp_slice_match
        item = get_array_slice(getattr(self._resource, "component", None), match)
        if item is None:
            return None
        if mode == "raw":
            return item
        item_dict = item if isinstance(item, dict) else item.model_dump(by_alias=True, exclude_none=True)
        return unwrap_slice_choice(item_dict, ["code"], "valueQuantity")

    def set_vscat(self, value: dict | None = None) -> "ObservationBpProfile":
        match = self.__class__._vscat_slice_match
        merged = apply_slice_match((value or {}), match)
        merged = CodeableConcept(**merged)
        items = getattr(self._resource, "category", None) or []
        set_array_slice(items, match, merged)
        setattr(self._resource, "category", items)
        return self

    def set_systolic_bp(self, value: dict | None = None) -> "ObservationBpProfile":
        match = self.__class__._systolic_bp_slice_match
        wrapped = wrap_slice_choice((value or {}), "valueQuantity")
        merged = apply_slice_match(wrapped, match)
        merged = ObservationComponent(**merged)
        items = getattr(self._resource, "component", None) or []
        set_array_slice(items, match, merged)
        setattr(self._resource, "component", items)
        return self

    def set_diastolic_bp(self, value: dict | None = None) -> "ObservationBpProfile":
        match = self.__class__._diastolic_bp_slice_match
        wrapped = wrap_slice_choice((value or {}), "valueQuantity")
        merged = apply_slice_match(wrapped, match)
        merged = ObservationComponent(**merged)
        items = getattr(self._resource, "component", None) or []
        set_array_slice(items, match, merged)
        setattr(self._resource, "component", items)
        return self

    def validate(self) -> dict[str, list[str]]:
        profile_name = "ObservationBpProfile"
        errors: list[str] = []
        warnings: list[str] = []
        errors.extend(validate_required(self._resource, profile_name, "status"))
        errors.extend(validate_enum(self._resource, profile_name, "status", ["registered","preliminary","final","amended","corrected","cancelled","entered-in-error","unknown"]))
        errors.extend(validate_required(self._resource, profile_name, "category"))
        errors.extend(validate_slice_cardinality(self._resource, profile_name, "category", {"coding":{"code":"vital-signs","system":"http://terminology.hl7.org/CodeSystem/observation-category"}}, "VSCat", 1, 1))
        errors.extend(validate_required(self._resource, profile_name, "code"))
        errors.extend(validate_fixed_value(self._resource, profile_name, "code", {"coding":[{"code":"85354-9","system":"http://loinc.org"}]}))
        errors.extend(validate_required(self._resource, profile_name, "subject"))
        errors.extend(validate_reference(self._resource, profile_name, "subject", ["Patient"]))
        errors.extend(validate_choice_required(self._resource, profile_name, ["effective_date_time","effective_period"]))
        errors.extend(validate_reference(self._resource, profile_name, "has_member", ["MolecularSequence","QuestionnaireResponse","Observation"]))
        errors.extend(validate_reference(self._resource, profile_name, "derived_from", ["DocumentReference","ImagingStudy","Media","MolecularSequence","QuestionnaireResponse","Observation"]))
        errors.extend(validate_slice_cardinality(self._resource, profile_name, "component", {"code":{"coding":{"code":"8480-6","system":"http://loinc.org"}}}, "SystolicBP", 1, 1))
        errors.extend(validate_slice_cardinality(self._resource, profile_name, "component", {"code":{"coding":{"code":"8462-4","system":"http://loinc.org"}}}, "DiastolicBP", 1, 1))
        warnings.extend(validate_enum(self._resource, profile_name, "category", ["social-history","vital-signs","imaging","laboratory","procedure","survey","exam","therapy","activity"]))
        warnings.extend(validate_enum(self._resource, profile_name, "code", ["85353-1","9279-1","8867-4","2708-6","8310-5","8302-2","9843-4","29463-7","39156-5","85354-9","8480-6","8462-4","8478-0"]))
        warnings.extend(validate_enum(self._resource, profile_name, "data_absent_reason", ["unknown","asked-unknown","temp-unknown","not-asked","asked-declined","masked","not-applicable","unsupported","as-text","error","not-a-number","negative-infinity","positive-infinity","not-performed","not-permitted"]))
        warnings.extend(validate_must_support(self._resource, profile_name, "data_absent_reason"))
        return {"errors": errors, "warnings": warnings}

"
`;

exports[`Python US Core Example generates US Core Patient profile 1`] = `
"# WARNING: This file is autogenerated by @atomic-ehr/codegen.
# GitHub: https://github.com/atomic-ehr/codegen
# Any manual changes made to this file may be overwritten.

from __future__ import annotations

from typing import Any, Literal, overload

from fhir_types.hl7_fhir_r4_core.patient import Patient
from fhir_types.hl7_fhir_r4_core.base import Extension
from fhir_types.hl7_fhir_r4_core.base import HumanName, Identifier
from .extension_uscore_ethnicity_extension import UscoreEthnicityExtension
from .extension_uscore_individual_sex_extension import UscoreIndividualSexExtension
from .extension_uscore_interpreter_needed_extension import UscoreInterpreterNeededExtension
from .extension_uscore_race_extension import UscoreRaceExtension
from .extension_uscore_tribal_affiliation_extension import UscoreTribalAffiliationExtension
from .profile_helpers import (
    build_resource,
    ensure_profile,
    _get_key,
    is_extension,
    get_extension_value,
    push_extension,
    extract_complex_extension,
    validate_must_support,
    validate_required,
)


class UscorePatientProfile:
    """The US Core Patient Profile inherits from the FHIR [Patient](https://hl7.org/fhir/R4/patient.html) resource; refer to it for scope and usage definitions. This profile meets the requirements of the [U.S. Core Data for Interoperability (USCDI)](https://www.healthit.gov/isp/united-states-core-data-interoperability-uscdi) *Patient Demographics/Information* Data Class. It sets minimum expectations for the Patient resource to record, search, and fetch basic demographics and other administrative information about an individual patient. It specifies which core elements, extensions, vocabularies, and value sets **SHALL** be present and constrains how the elements are used. Providing the floor for standards development for specific use cases promotes interoperability and adoption.

    CanonicalURL: http://hl7.org/fhir/us/core/StructureDefinition/us-core-patient
    """

    canonical_url: str = "http://hl7.org/fhir/us/core/StructureDefinition/us-core-patient"

    def __init__(self, resource: Patient) -> None:
        self._resource = resource

    @classmethod
    def from_resource(cls, resource: Patient) -> "UscorePatientProfile":
        meta = getattr(resource, "meta", None)
        profiles = getattr(meta, "profile", None) if meta is not None else None
        if profiles is None or cls.canonical_url not in profiles:
            raise ValueError(f"UscorePatientProfile: meta.profile must include {cls.canonical_url}")
        profile = cls(resource)
        result = profile.validate()
        if result["errors"]:
            raise ValueError("; ".join(result["errors"]))
        return profile

    @classmethod
    def apply(cls, resource: Patient) -> "UscorePatientProfile":
        ensure_profile(resource, cls.canonical_url)
        return cls(resource)

    @classmethod
    def create_resource(cls, *, identifier: list[Identifier], name: list[HumanName]) -> Patient:
        return build_resource(
            Patient,
            resource_type="Patient",
            identifier=identifier,
            name=name,
            meta={"profile": [cls.canonical_url]},
        )

    @classmethod
    def create(cls, *, identifier: list[Identifier], name: list[HumanName]) -> "UscorePatientProfile":
        return cls.apply(cls.create_resource(identifier=identifier, name=name))

    def to_resource(self) -> Patient:
        return self._resource

    def get_identifier(self) -> list[Identifier] | None:
        return getattr(self._resource, "identifier", None)

    def set_identifier(self, value: list[Identifier]) -> "UscorePatientProfile":
        setattr(self._resource, "identifier", value)
        return self

    def get_name(self) -> list[HumanName] | None:
        return getattr(self._resource, "name", None)

    def set_name(self, value: list[HumanName]) -> "UscorePatientProfile":
        setattr(self._resource, "name", value)
        return self

    @overload
    def get_race(self) -> dict | None: ...
    @overload
    def get_race(self, mode: Literal["raw"]) -> Extension | None: ...
    @overload
    def get_race(self, mode: Literal["profile"]) -> UscoreRaceExtension | None: ...
    def get_race(self, mode: Literal["raw", "profile"] | None = None) -> dict | Extension | UscoreRaceExtension | None:
        exts = getattr(self._resource, "extension", None) or []
        ext = next((e for e in exts if is_extension(e, "http://hl7.org/fhir/us/core/StructureDefinition/us-core-race")), None)
        if ext is None:
            return None
        if mode == "raw":
            return ext if not isinstance(ext, dict) else Extension(**ext)
        if mode == "profile":
            return UscoreRaceExtension.apply(ext if not isinstance(ext, dict) else Extension(**ext))
        config = [{"name": "ombCategory", "valueField": "value_coding", "isArray": False}, {"name": "detailed", "valueField": "value_coding", "isArray": True}, {"name": "text", "valueField": "value_string", "isArray": False}]
        return extract_complex_extension(ext, config)

    def set_race(self, value: "UscoreRaceExtension | Extension | dict") -> "UscorePatientProfile":
        if isinstance(value, UscoreRaceExtension):
            push_extension(self._resource, value.to_resource())
        elif is_extension(value):
            if _get_key(value, "url") != "http://hl7.org/fhir/us/core/StructureDefinition/us-core-race":
                raise ValueError(f"Expected extension url 'http://hl7.org/fhir/us/core/StructureDefinition/us-core-race', got {_get_key(value, 'url')!r}")
            push_extension(self._resource, value)
        else:
            sub_extensions = []
            if value.get("ombCategory") is not None:
                sub_extensions.append({"url": "ombCategory", "value_coding": value["ombCategory"]})
            for item in value.get("detailed", []):
                sub_extensions.append({"url": "detailed", "value_coding": item})
            if value.get("text") is not None:
                sub_extensions.append({"url": "text", "value_string": value["text"]})
            push_extension(self._resource, {"url": "http://hl7.org/fhir/us/core/StructureDefinition/us-core-race", "extension": sub_extensions})
        return self

    @overload
    def get_ethnicity(self) -> dict | None: ...
    @overload
    def get_ethnicity(self, mode: Literal["raw"]) -> Extension | None: ...
    @overload
    def get_ethnicity(self, mode: Literal["profile"]) -> UscoreEthnicityExtension | None: ...
    def get_ethnicity(self, mode: Literal["raw", "profile"] | None = None) -> dict | Extension | UscoreEthnicityExtension | None:
        exts = getattr(self._resource, "extension", None) or []
        ext = next((e for e in exts if is_extension(e, "http://hl7.org/fhir/us/core/StructureDefinition/us-core-ethnicity")), None)
        if ext is None:
            return None
        if mode == "raw":
            return ext if not isinstance(ext, dict) else Extension(**ext)
        if mode == "profile":
            return UscoreEthnicityExtension.apply(ext if not isinstance(ext, dict) else Extension(**ext))
        config = [{"name": "ombCategory", "valueField": "value_coding", "isArray": False}, {"name": "detailed", "valueField": "value_coding", "isArray": True}, {"name": "text", "valueField": "value_string", "isArray": False}]
        return extract_complex_extension(ext, config)

    def set_ethnicity(self, value: "UscoreEthnicityExtension | Extension | dict") -> "UscorePatientProfile":
        if isinstance(value, UscoreEthnicityExtension):
            push_extension(self._resource, value.to_resource())
        elif is_extension(value):
            if _get_key(value, "url") != "http://hl7.org/fhir/us/core/StructureDefinition/us-core-ethnicity":
                raise ValueError(f"Expected extension url 'http://hl7.org/fhir/us/core/StructureDefinition/us-core-ethnicity', got {_get_key(value, 'url')!r}")
            push_extension(self._resource, value)
        else:
            sub_extensions = []
            if value.get("ombCategory") is not None:
                sub_extensions.append({"url": "ombCategory", "value_coding": value["ombCategory"]})
            for item in value.get("detailed", []):
                sub_extensions.append({"url": "detailed", "value_coding": item})
            if value.get("text") is not None:
                sub_extensions.append({"url": "text", "value_string": value["text"]})
            push_extension(self._resource, {"url": "http://hl7.org/fhir/us/core/StructureDefinition/us-core-ethnicity", "extension": sub_extensions})
        return self

    @overload
    def get_tribal_affiliation(self) -> dict | None: ...
    @overload
    def get_tribal_affiliation(self, mode: Literal["raw"]) -> Extension | None: ...
    @overload
    def get_tribal_affiliation(self, mode: Literal["profile"]) -> UscoreTribalAffiliationExtension | None: ...
    def get_tribal_affiliation(self, mode: Literal["raw", "profile"] | None = None) -> dict | Extension | UscoreTribalAffiliationExtension | None:
        exts = getattr(self._resource, "extension", None) or []
        ext = next((e for e in exts if is_extension(e, "http://hl7.org/fhir/us/core/StructureDefinition/us-core-tribal-affiliation")), None)
        if ext is None:
            return None
        if mode == "raw":
            return ext if not isinstance(ext, dict) else Extension(**ext)
        if mode == "profile":
            return UscoreTribalAffiliationExtension.apply(ext if not isinstance(ext, dict) else Extension(**ext))
        config = [{"name": "tribalAffiliation", "valueField": "value_codeable_concept", "isArray": False}, {"name": "isEnrolled", "valueField": "value_boolean", "isArray": False}]
        return extract_complex_extension(ext, config)

    def set_tribal_affiliation(self, value: "UscoreTribalAffiliationExtension | Extension | dict") -> "UscorePatientProfile":
        if isinstance(value, UscoreTribalAffiliationExtension):
            push_extension(self._resource, value.to_resource())
        elif is_extension(value):
            if _get_key(value, "url") != "http://hl7.org/fhir/us/core/StructureDefinition/us-core-tribal-affiliation":
                raise ValueError(f"Expected extension url 'http://hl7.org/fhir/us/core/StructureDefinition/us-core-tribal-affiliation', got {_get_key(value, 'url')!r}")
            push_extension(self._resource, value)
        else:
            sub_extensions = []
            if value.get("tribalAffiliation") is not None:
                sub_extensions.append({"url": "tribalAffiliation", "value_codeable_concept": value["tribalAffiliation"]})
            if value.get("isEnrolled") is not None:
                sub_extensions.append({"url": "isEnrolled", "value_boolean": value["isEnrolled"]})
            push_extension(self._resource, {"url": "http://hl7.org/fhir/us/core/StructureDefinition/us-core-tribal-affiliation", "extension": sub_extensions})
        return self

    @overload
    def get_sex(self) -> Coding | None: ...
    @overload
    def get_sex(self, mode: Literal["raw"]) -> Extension | None: ...
    @overload
    def get_sex(self, mode: Literal["profile"]) -> UscoreIndividualSexExtension | None: ...
    def get_sex(self, mode: Literal["raw", "profile"] | None = None) -> Coding | Extension | UscoreIndividualSexExtension | None:
        exts = getattr(self._resource, "extension", None) or []
        ext = next((e for e in exts if is_extension(e, "http://hl7.org/fhir/us/core/StructureDefinition/us-core-individual-sex")), None)
        if ext is None:
            return None
        if mode == "raw":
            return ext if not isinstance(ext, dict) else Extension(**ext)
        if mode == "profile":
            return UscoreIndividualSexExtension.apply(ext if not isinstance(ext, dict) else Extension(**ext))
        return get_extension_value(ext, "value_coding")

    def set_sex(self, value: "UscoreIndividualSexExtension | Extension | Any") -> "UscorePatientProfile":
        if isinstance(value, UscoreIndividualSexExtension):
            push_extension(self._resource, value.to_resource())
        elif is_extension(value):
            if _get_key(value, "url") != "http://hl7.org/fhir/us/core/StructureDefinition/us-core-individual-sex":
                raise ValueError(f"Expected extension url 'http://hl7.org/fhir/us/core/StructureDefinition/us-core-individual-sex', got {_get_key(value, 'url')!r}")
            push_extension(self._resource, value)
        else:
            push_extension(self._resource, {"url": "http://hl7.org/fhir/us/core/StructureDefinition/us-core-individual-sex", "value_coding": value})
        return self

    @overload
    def get_interpreter_required(self) -> Coding | None: ...
    @overload
    def get_interpreter_required(self, mode: Literal["raw"]) -> Extension | None: ...
    @overload
    def get_interpreter_required(self, mode: Literal["profile"]) -> UscoreInterpreterNeededExtension | None: ...
    def get_interpreter_required(self, mode: Literal["raw", "profile"] | None = None) -> Coding | Extension | UscoreInterpreterNeededExtension | None:
        exts = getattr(self._resource, "extension", None) or []
        ext = next((e for e in exts if is_extension(e, "http://hl7.org/fhir/us/core/StructureDefinition/us-core-interpreter-needed")), None)
        if ext is None:
            return None
        if mode == "raw":
            return ext if not isinstance(ext, dict) else Extension(**ext)
        if mode == "profile":
            return UscoreInterpreterNeededExtension.apply(ext if not isinstance(ext, dict) else Extension(**ext))
        return get_extension_value(ext, "value_coding")

    def set_interpreter_required(self, value: "UscoreInterpreterNeededExtension | Extension | Any") -> "UscorePatientProfile":
        if isinstance(value, UscoreInterpreterNeededExtension):
            push_extension(self._resource, value.to_resource())
        elif is_extension(value):
            if _get_key(value, "url") != "http://hl7.org/fhir/us/core/StructureDefinition/us-core-interpreter-needed":
                raise ValueError(f"Expected extension url 'http://hl7.org/fhir/us/core/StructureDefinition/us-core-interpreter-needed', got {_get_key(value, 'url')!r}")
            push_extension(self._resource, value)
        else:
            push_extension(self._resource, {"url": "http://hl7.org/fhir/us/core/StructureDefinition/us-core-interpreter-needed", "value_coding": value})
        return self

    def validate(self) -> dict[str, list[str]]:
        profile_name = "UscorePatientProfile"
        errors: list[str] = []
        warnings: list[str] = []
        errors.extend(validate_required(self._resource, profile_name, "identifier"))
        errors.extend(validate_required(self._resource, profile_name, "name"))
        warnings.extend(validate_must_support(self._resource, profile_name, "birth_date"))
        warnings.extend(validate_must_support(self._resource, profile_name, "address"))
        return {"errors": errors, "warnings": warnings}

"
`;

exports[`Python US Core Example generates US Core Blood Pressure profile 1`] = `
"# WARNING: This file is autogenerated by @atomic-ehr/codegen.
# GitHub: https://github.com/atomic-ehr/codegen
# Any manual changes made to this file may be overwritten.

from __future__ import annotations

from typing import Any

from fhir_types.hl7_fhir_r4_core.observation import Observation
from fhir_types.hl7_fhir_r4_core.base import (
    CodeableConcept,
    Period,
    Quantity,
    Range,
    Ratio,
    Reference,
    SampledData,
)
from fhir_types.hl7_fhir_r4_core.observation import ObservationComponent
from .profile_helpers import (
    build_resource,
    ensure_profile,
    ensure_slice_defaults,
    apply_slice_match,
    get_array_slice,
    matches_value,
    set_array_slice,
    strip_match_keys,
    wrap_slice_choice,
    unwrap_slice_choice,
    validate_choice_required,
    validate_enum,
    validate_fixed_value,
    validate_must_support,
    validate_reference,
    validate_required,
    validate_slice_cardinality,
)


class UscoreBloodPressureProfile:
    """US Core Blood Pressure Profile inherits from the US Core Vital Signs Profile. This profile sets minimum expectations for the Observation resource to record, search,  and fetch diastolic and systolic blood pressure observations with standard LOINC codes and UCUM units of measure. It specifies which *additional*  core elements, extensions,  vocabularies, and value sets **SHALL** be present in the resource and constrains how the elements are used. Providing the floor for standards development for specific use cases promotes interoperability and adoption.

    CanonicalURL: http://hl7.org/fhir/us/core/StructureDefinition/us-core-blood-pressure
    """

    canonical_url: str = "http://hl7.org/fhir/us/core/StructureDefinition/us-core-blood-pressure"

    _vscat_slice_match: dict = {"coding":[{"code":"vital-signs","system":"http://terminology.hl7.org/CodeSystem/observation-category"}]}
    _systolic_slice_match: dict = {"code":{"coding":[{"system":"http://loinc.org","code":"8480-6"}]}}
    _diastolic_slice_match: dict = {"code":{"coding":[{"system":"http://loinc.org","code":"8462-4"}]}}

    def __init__(self, resource: Observation) -> None:
        self._resource = resource

    @classmethod
    def from_resource(cls, resource: Observation) -> "UscoreBloodPressureProfile":
        meta = getattr(resource, "meta", None)
        profiles = getattr(meta, "profile", None) if meta is not None else None
        if profiles is None or cls.canonical_url not in profiles:
            raise ValueError(f"UscoreBloodPressureProfile: meta.profile must include {cls.canonical_url}")
        profile = cls(resource)
        result = profile.validate()
        if result["errors"]:
            raise ValueError("; ".join(result["errors"]))
        return profile

    @classmethod
    def apply(cls, resource: Observation) -> "UscoreBloodPressureProfile":
        ensure_profile(resource, cls.canonical_url)
        return cls(resource)

    @classmethod
    def create_resource(cls, *, category: list[CodeableConcept] | None = None, component: list[BackboneElement] | None = None, status: str, subject: Reference) -> Observation:
        category_with_defaults = ensure_slice_defaults(list(category or []), cls._vscat_slice_match)
        component_with_defaults = ensure_slice_defaults(
            list(component or []),
            cls._systolic_slice_match,
            cls._diastolic_slice_match,
        )

        return build_resource(
            Observation,
            resource_type="Observation",
            code={"coding":[{"system":"http://loinc.org","code":"85354-9"}]},
            category=category_with_defaults,
            component=component_with_defaults,
            status=status,
            subject=subject,
            meta={"profile": [cls.canonical_url]},
        )

    @classmethod
    def create(cls, *, category: list[CodeableConcept] | None = None, component: list[BackboneElement] | None = None, status: str, subject: Reference) -> "UscoreBloodPressureProfile":
        return cls.apply(cls.create_resource(category=category, component=component, status=status, subject=subject))

    def to_resource(self) -> Observation:
        return self._resource

    def get_status(self) -> str | None:
        return getattr(self._resource, "status", None)

    def set_status(self, value: str) -> "UscoreBloodPressureProfile":
        setattr(self._resource, "status", value)
        return self

    def get_subject(self) -> Reference | None:
        return getattr(self._resource, "subject", None)

    def set_subject(self, value: Reference) -> "UscoreBloodPressureProfile":
        setattr(self._resource, "subject", value)
        return self

    def get_category(self) -> list[CodeableConcept] | None:
        return getattr(self._resource, "category", None)

    def set_category(self, value: list[CodeableConcept]) -> "UscoreBloodPressureProfile":
        setattr(self._resource, "category", value)
        return self

    def get_code(self) -> CodeableConcept | None:
        return getattr(self._resource, "code", None)

    def set_code(self, value: CodeableConcept) -> "UscoreBloodPressureProfile":
        setattr(self._resource, "code", value)
        return self

    def get_component(self) -> list[BackboneElement] | None:
        return getattr(self._resource, "component", None)

    def set_component(self, value: list[BackboneElement]) -> "UscoreBloodPressureProfile":
        setattr(self._resource, "component", value)
        return self

    def get_effective_date_time(self) -> str | None:
        return getattr(self._resource, "effective_date_time", None)

    def set_effective_date_time(self, value: str) -> "UscoreBloodPressureProfile":
        setattr(self._resource, "effective_date_time", value)
        return self

    def get_effective_period(self) -> Period | None:
        return getattr(self._resource, "effective_period", None)

    def set_effective_period(self, value: Period) -> "UscoreBloodPressureProfile":
        setattr(self._resource, "effective_period", value)
        return self

    def get_value_quantity(self) -> Quantity | None:
        return getattr(self._resource, "value_quantity", None)

    def set_value_quantity(self, value: Quantity) -> "UscoreBloodPressureProfile":
        setattr(self._resource, "value_quantity", value)
        return self

    def get_value_codeable_concept(self) -> CodeableConcept | None:
        return getattr(self._resource, "value_codeable_concept", None)

    def set_value_codeable_concept(self, value: CodeableConcept) -> "UscoreBloodPressureProfile":
        setattr(self._resource, "value_codeable_concept", value)
        return self

    def get_value_string(self) -> str | None:
        return getattr(self._resource, "value_string", None)

    def set_value_string(self, value: str) -> "UscoreBloodPressureProfile":
        setattr(self._resource, "value_string", value)
        return self

    def get_value_boolean(self) -> bool | None:
        return getattr(self._resource, "value_boolean", None)

    def set_value_boolean(self, value: bool) -> "UscoreBloodPressureProfile":
        setattr(self._resource, "value_boolean", value)
        return self

    def get_value_integer(self) -> int | None:
        return getattr(self._resource, "value_integer", None)

    def set_value_integer(self, value: int) -> "UscoreBloodPressureProfile":
        setattr(self._resource, "value_integer", value)
        return self

    def get_value_range(self) -> Range | None:
        return getattr(self._resource, "value_range", None)

    def set_value_range(self, value: Range) -> "UscoreBloodPressureProfile":
        setattr(self._resource, "value_range", value)
        return self

    def get_value_ratio(self) -> Ratio | None:
        return getattr(self._resource, "value_ratio", None)

    def set_value_ratio(self, value: Ratio) -> "UscoreBloodPressureProfile":
        setattr(self._resource, "value_ratio", value)
        return self

    def get_value_sampled_data(self) -> SampledData | None:
        return getattr(self._resource, "value_sampled_data", None)

    def set_value_sampled_data(self, value: SampledData) -> "UscoreBloodPressureProfile":
        setattr(self._resource, "value_sampled_data", value)
        return self

    def get_value_time(self) -> str | None:
        return getattr(self._resource, "value_time", None)

    def set_value_time(self, value: str) -> "UscoreBloodPressureProfile":
        setattr(self._resource, "value_time", value)
        return self

    def get_value_date_time(self) -> str | None:
        return getattr(self._resource, "value_date_time", None)

    def set_value_date_time(self, value: str) -> "UscoreBloodPressureProfile":
        setattr(self._resource, "value_date_time", value)
        return self

    def get_value_period(self) -> Period | None:
        return getattr(self._resource, "value_period", None)

    def set_value_period(self, value: Period) -> "UscoreBloodPressureProfile":
        setattr(self._resource, "value_period", value)
        return self

    def get_vscat(self, mode: str | None = None) -> Any | None:
        match = self.__class__._vscat_slice_match
        item = get_array_slice(getattr(self._resource, "category", None), match)
        if item is None:
            return None
        if mode == "raw":
            return item
        item_dict = item if isinstance(item, dict) else item.model_dump(by_alias=True, exclude_none=True)
        return strip_match_keys(item_dict, ["coding"])

    def get_systolic(self, mode: str | None = None) -> Any | None:
        match = self.__class__._systolic_slice_match
        item = get_array_slice(getattr(self._resource, "component", None), match)
        if item is None:
            return None
        if mode == "raw":
            return item
        item_dict = item if isinstance(item, dict) else item.model_dump(by_alias=True, exclude_none=True)
        return unwrap_slice_choice(item_dict, ["code"], "valueQuantity")

    def get_diastolic(self, mode: str | None = None) -> Any | None:
        match = self.__class__._diastolic_slice_match
        item = get_array_slice(getattr(self._resource, "component", None), match)
        if item is None:
            return None
        if mode == "raw":
            return item
        item_dict = item if isinstance(item, dict) else item.model_dump(by_alias=True, exclude_none=True)
        return unwrap_slice_choice(item_dict, ["code"], "valueQuantity")

    def set_vscat(self, value: dict | None = None) -> "UscoreBloodPressureProfile":
        match = self.__class__._vscat_slice_match
        merged = apply_slice_match((value or {}), match)
        merged = CodeableConcept(**merged)
        items = getattr(self._resource, "category", None) or []
        set_array_slice(items, match, merged)
        setattr(self._resource, "category", items)
        return self

    def set_systolic(self, value: dict | None = None) -> "UscoreBloodPressureProfile":
        match = self.__class__._systolic_slice_match
        wrapped = wrap_slice_choice((value or {}), "valueQuantity")
        merged = apply_slice_match(wrapped, match)
        merged = ObservationComponent(**merged)
        items = getattr(self._resource, "component", None) or []
        set_array_slice(items, match, merged)
        setattr(self._resource, "component", items)
        return self

    def set_diastolic(self, value: dict | None = None) -> "UscoreBloodPressureProfile":
        match = self.__class__._diastolic_slice_match
        wrapped = wrap_slice_choice((value or {}), "valueQuantity")
        merged = apply_slice_match(wrapped, match)
        merged = ObservationComponent(**merged)
        items = getattr(self._resource, "component", None) or []
        set_array_slice(items, match, merged)
        setattr(self._resource, "component", items)
        return self

    def validate(self) -> dict[str, list[str]]:
        profile_name = "UscoreBloodPressureProfile"
        errors: list[str] = []
        warnings: list[str] = []
        errors.extend(validate_required(self._resource, profile_name, "status"))
        errors.extend(validate_enum(self._resource, profile_name, "status", ["registered","preliminary","final","amended","corrected","cancelled","entered-in-error","unknown"]))
        errors.extend(validate_required(self._resource, profile_name, "category"))
        errors.extend(validate_slice_cardinality(self._resource, profile_name, "category", {"coding":{"code":"vital-signs","system":"http://terminology.hl7.org/CodeSystem/observation-category"}}, "VSCat", 1, 1))
        errors.extend(validate_required(self._resource, profile_name, "code"))
        errors.extend(validate_fixed_value(self._resource, profile_name, "code", {"coding":[{"system":"http://loinc.org","code":"85354-9"}]}))
        errors.extend(validate_required(self._resource, profile_name, "subject"))
        errors.extend(validate_reference(self._resource, profile_name, "subject", ["Patient"]))
        errors.extend(validate_choice_required(self._resource, profile_name, ["effective_date_time","effective_period"]))
        errors.extend(validate_reference(self._resource, profile_name, "has_member", ["MolecularSequence","QuestionnaireResponse","Observation"]))
        errors.extend(validate_reference(self._resource, profile_name, "derived_from", ["DocumentReference","ImagingStudy","Media","MolecularSequence","QuestionnaireResponse","Observation"]))
        errors.extend(validate_slice_cardinality(self._resource, profile_name, "component", {"code":{"coding":[{"system":"http://loinc.org","code":"8480-6"}]}}, "systolic", 1, 1))
        errors.extend(validate_slice_cardinality(self._resource, profile_name, "component", {"code":{"coding":[{"system":"http://loinc.org","code":"8462-4"}]}}, "diastolic", 1, 1))
        errors.extend(validate_reference(self._resource, profile_name, "performer", ["PractitionerRole","USCoreCareTeam","USCoreOrganizationProfile","Patient","USCorePractitionerProfile","USCoreRelatedPersonProfile"]))
        warnings.extend(validate_enum(self._resource, profile_name, "category", ["social-history","vital-signs","imaging","laboratory","procedure","survey","exam","therapy","activity"]))
        warnings.extend(validate_enum(self._resource, profile_name, "code", ["2708-6","29463-7","3140-1","3150-0","3151-8","39156-5","59408-5","59575-1","59576-9","77606-2","8287-5","8289-1","8302-2","8306-3","8310-5","8462-4","8478-0","8480-6","8867-4","9279-1","9843-4"]))
        warnings.extend(validate_enum(self._resource, profile_name, "data_absent_reason", ["unknown","asked-unknown","temp-unknown","not-asked","asked-declined","masked","not-applicable","unsupported","as-text","error","not-a-number","negative-infinity","positive-infinity","not-performed","not-permitted"]))
        warnings.extend(validate_must_support(self._resource, profile_name, "data_absent_reason"))
        warnings.extend(validate_must_support(self._resource, profile_name, "performer"))
        return {"errors": errors, "warnings": warnings}

"
`;

exports[`Python US Core Example generates US Core Body Weight profile 1`] = `
"# WARNING: This file is autogenerated by @atomic-ehr/codegen.
# GitHub: https://github.com/atomic-ehr/codegen
# Any manual changes made to this file may be overwritten.

from __future__ import annotations

from typing import Any

from fhir_types.hl7_fhir_r4_core.observation import Observation
from fhir_types.hl7_fhir_r4_core.base import (
    CodeableConcept,
    Period,
    Quantity,
    Range,
    Ratio,
    Reference,
    SampledData,
)
from .profile_helpers import (
    build_resource,
    ensure_profile,
    ensure_slice_defaults,
    apply_slice_match,
    get_array_slice,
    matches_value,
    set_array_slice,
    strip_match_keys,
    validate_choice_required,
    validate_enum,
    validate_excluded,
    validate_fixed_value,
    validate_must_support,
    validate_reference,
    validate_required,
    validate_slice_cardinality,
)


class UscoreBodyWeightProfile:
    """The US Core Body Weight Profile inherits from the US Core Vital Signs Profile. This profile sets minimum expectations for the Observation resource to record, search,  and fetch body weight observations with a standard LOINC code and UCUM units of measure. It specifies which *additional*  core elements, extensions,  vocabularies, and value sets **SHALL** be present in the resource and constrains how the elements are used. Providing the floor for standards development for specific use cases promotes interoperability and adoption.

    CanonicalURL: http://hl7.org/fhir/us/core/StructureDefinition/us-core-body-weight
    """

    canonical_url: str = "http://hl7.org/fhir/us/core/StructureDefinition/us-core-body-weight"

    _vscat_slice_match: dict = {"coding":[{"code":"vital-signs","system":"http://terminology.hl7.org/CodeSystem/observation-category"}]}

    def __init__(self, resource: Observation) -> None:
        self._resource = resource

    @classmethod
    def from_resource(cls, resource: Observation) -> "UscoreBodyWeightProfile":
        meta = getattr(resource, "meta", None)
        profiles = getattr(meta, "profile", None) if meta is not None else None
        if profiles is None or cls.canonical_url not in profiles:
            raise ValueError(f"UscoreBodyWeightProfile: meta.profile must include {cls.canonical_url}")
        profile = cls(resource)
        result = profile.validate()
        if result["errors"]:
            raise ValueError("; ".join(result["errors"]))
        return profile

    @classmethod
    def apply(cls, resource: Observation) -> "UscoreBodyWeightProfile":
        ensure_profile(resource, cls.canonical_url)
        return cls(resource)

    @classmethod
    def create_resource(cls, *, category: list[CodeableConcept] | None = None, status: str, subject: Reference) -> Observation:
        category_with_defaults = ensure_slice_defaults(list(category or []), cls._vscat_slice_match)

        return build_resource(
            Observation,
            resource_type="Observation",
            code={"coding":[{"system":"http://loinc.org","code":"29463-7"}]},
            category=category_with_defaults,
            status=status,
            subject=subject,
            meta={"profile": [cls.canonical_url]},
        )

    @classmethod
    def create(cls, *, category: list[CodeableConcept] | None = None, status: str, subject: Reference) -> "UscoreBodyWeightProfile":
        return cls.apply(cls.create_resource(category=category, status=status, subject=subject))

    def to_resource(self) -> Observation:
        return self._resource

    def get_status(self) -> str | None:
        return getattr(self._resource, "status", None)

    def set_status(self, value: str) -> "UscoreBodyWeightProfile":
        setattr(self._resource, "status", value)
        return self

    def get_subject(self) -> Reference | None:
        return getattr(self._resource, "subject", None)

    def set_subject(self, value: Reference) -> "UscoreBodyWeightProfile":
        setattr(self._resource, "subject", value)
        return self

    def get_category(self) -> list[CodeableConcept] | None:
        return getattr(self._resource, "category", None)

    def set_category(self, value: list[CodeableConcept]) -> "UscoreBodyWeightProfile":
        setattr(self._resource, "category", value)
        return self

    def get_code(self) -> CodeableConcept | None:
        return getattr(self._resource, "code", None)

    def set_code(self, value: CodeableConcept) -> "UscoreBodyWeightProfile":
        setattr(self._resource, "code", value)
        return self

    def get_effective_date_time(self) -> str | None:
        return getattr(self._resource, "effective_date_time", None)

    def set_effective_date_time(self, value: str) -> "UscoreBodyWeightProfile":
        setattr(self._resource, "effective_date_time", value)
        return self

    def get_effective_period(self) -> Period | None:
        return getattr(self._resource, "effective_period", None)

    def set_effective_period(self, value: Period) -> "UscoreBodyWeightProfile":
        setattr(self._resource, "effective_period", value)
        return self

    def get_value_quantity(self) -> Quantity | None:
        return getattr(self._resource, "value_quantity", None)

    def set_value_quantity(self, value: Quantity) -> "UscoreBodyWeightProfile":
        setattr(self._resource, "value_quantity", value)
        return self

    def get_value_codeable_concept(self) -> CodeableConcept | None:
        return getattr(self._resource, "value_codeable_concept", None)

    def set_value_codeable_concept(self, value: CodeableConcept) -> "UscoreBodyWeightProfile":
        setattr(self._resource, "value_codeable_concept", value)
        return self

    def get_value_string(self) -> str | None:
        return getattr(self._resource, "value_string", None)

    def set_value_string(self, value: str) -> "UscoreBodyWeightProfile":
        setattr(self._resource, "value_string", value)
        return self

    def get_value_boolean(self) -> bool | None:
        return getattr(self._resource, "value_boolean", None)

    def set_value_boolean(self, value: bool) -> "UscoreBodyWeightProfile":
        setattr(self._resource, "value_boolean", value)
        return self

    def get_value_integer(self) -> int | None:
        return getattr(self._resource, "value_integer", None)

    def set_value_integer(self, value: int) -> "UscoreBodyWeightProfile":
        setattr(self._resource, "value_integer", value)
        return self

    def get_value_range(self) -> Range | None:
        return getattr(self._resource, "value_range", None)

    def set_value_range(self, value: Range) -> "UscoreBodyWeightProfile":
        setattr(self._resource, "value_range", value)
        return self

    def get_value_ratio(self) -> Ratio | None:
        return getattr(self._resource, "value_ratio", None)

    def set_value_ratio(self, value: Ratio) -> "UscoreBodyWeightProfile":
        setattr(self._resource, "value_ratio", value)
        return self

    def get_value_sampled_data(self) -> SampledData | None:
        return getattr(self._resource, "value_sampled_data", None)

    def set_value_sampled_data(self, value: SampledData) -> "UscoreBodyWeightProfile":
        setattr(self._resource, "value_sampled_data", value)
        return self

    def get_value_time(self) -> str | None:
        return getattr(self._resource, "value_time", None)

    def set_value_time(self, value: str) -> "UscoreBodyWeightProfile":
        setattr(self._resource, "value_time", value)
        return self

    def get_value_date_time(self) -> str | None:
        return getattr(self._resource, "value_date_time", None)

    def set_value_date_time(self, value: str) -> "UscoreBodyWeightProfile":
        setattr(self._resource, "value_date_time", value)
        return self

    def get_value_period(self) -> Period | None:
        return getattr(self._resource, "value_period", None)

    def set_value_period(self, value: Period) -> "UscoreBodyWeightProfile":
        setattr(self._resource, "value_period", value)
        return self

    def get_vscat(self, mode: str | None = None) -> Any | None:
        match = self.__class__._vscat_slice_match
        item = get_array_slice(getattr(self._resource, "category", None), match)
        if item is None:
            return None
        if mode == "raw":
            return item
        item_dict = item if isinstance(item, dict) else item.model_dump(by_alias=True, exclude_none=True)
        return strip_match_keys(item_dict, ["coding"])

    def set_vscat(self, value: dict | None = None) -> "UscoreBodyWeightProfile":
        match = self.__class__._vscat_slice_match
        merged = apply_slice_match((value or {}), match)
        merged = CodeableConcept(**merged)
        items = getattr(self._resource, "category", None) or []
        set_array_slice(items, match, merged)
        setattr(self._resource, "category", items)
        return self

    def validate(self) -> dict[str, list[str]]:
        profile_name = "UscoreBodyWeightProfile"
        errors: list[str] = []
        warnings: list[str] = []
        errors.extend(validate_required(self._resource, profile_name, "status"))
        errors.extend(validate_enum(self._resource, profile_name, "status", ["registered","preliminary","final","amended","corrected","cancelled","entered-in-error","unknown"]))
        errors.extend(validate_required(self._resource, profile_name, "category"))
        errors.extend(validate_slice_cardinality(self._resource, profile_name, "category", {"coding":{"code":"vital-signs","system":"http://terminology.hl7.org/CodeSystem/observation-category"}}, "VSCat", 1, 1))
        errors.extend(validate_required(self._resource, profile_name, "code"))
        errors.extend(validate_fixed_value(self._resource, profile_name, "code", {"coding":[{"system":"http://loinc.org","code":"29463-7"}]}))
        errors.extend(validate_required(self._resource, profile_name, "subject"))
        errors.extend(validate_reference(self._resource, profile_name, "subject", ["Patient"]))
        errors.extend(validate_choice_required(self._resource, profile_name, ["effective_date_time","effective_period"]))
        errors.extend(validate_reference(self._resource, profile_name, "has_member", ["MolecularSequence","QuestionnaireResponse","Observation"]))
        errors.extend(validate_reference(self._resource, profile_name, "derived_from", ["DocumentReference","ImagingStudy","Media","MolecularSequence","QuestionnaireResponse","Observation"]))
        errors.extend(validate_reference(self._resource, profile_name, "performer", ["PractitionerRole","USCoreCareTeam","USCoreOrganizationProfile","Patient","USCorePractitionerProfile","USCoreRelatedPersonProfile"]))
        errors.extend(validate_excluded(self._resource, profile_name, "value_codeable_concept"))
        errors.extend(validate_excluded(self._resource, profile_name, "value_string"))
        errors.extend(validate_excluded(self._resource, profile_name, "value_boolean"))
        errors.extend(validate_excluded(self._resource, profile_name, "value_integer"))
        errors.extend(validate_excluded(self._resource, profile_name, "value_range"))
        errors.extend(validate_excluded(self._resource, profile_name, "value_ratio"))
        errors.extend(validate_excluded(self._resource, profile_name, "value_sampled_data"))
        errors.extend(validate_excluded(self._resource, profile_name, "value_time"))
        errors.extend(validate_excluded(self._resource, profile_name, "value_date_time"))
        errors.extend(validate_excluded(self._resource, profile_name, "value_period"))
        warnings.extend(validate_enum(self._resource, profile_name, "category", ["social-history","vital-signs","imaging","laboratory","procedure","survey","exam","therapy","activity"]))
        warnings.extend(validate_enum(self._resource, profile_name, "code", ["2708-6","29463-7","3140-1","3150-0","3151-8","39156-5","59408-5","59575-1","59576-9","77606-2","8287-5","8289-1","8302-2","8306-3","8310-5","8462-4","8478-0","8480-6","8867-4","9279-1","9843-4"]))
        warnings.extend(validate_enum(self._resource, profile_name, "data_absent_reason", ["unknown","asked-unknown","temp-unknown","not-asked","asked-declined","masked","not-applicable","unsupported","as-text","error","not-a-number","negative-infinity","positive-infinity","not-performed","not-permitted"]))
        warnings.extend(validate_must_support(self._resource, profile_name, "data_absent_reason"))
        warnings.extend(validate_must_support(self._resource, profile_name, "performer"))
        return {"errors": errors, "warnings": warnings}

"
`;

exports[`Python US Core Example generates US Core Race extension profile 1`] = `
"# WARNING: This file is autogenerated by @atomic-ehr/codegen.
# GitHub: https://github.com/atomic-ehr/codegen
# Any manual changes made to this file may be overwritten.

from __future__ import annotations

from typing import Any, Literal, overload

from fhir_types.hl7_fhir_r4_core.base import Extension
from fhir_types.hl7_fhir_r4_core.base import Extension
from .profile_helpers import (
    build_resource,
    ensure_slice_defaults,
    apply_slice_match,
    get_array_slice,
    matches_value,
    set_array_slice,
    strip_match_keys,
    wrap_slice_choice,
    unwrap_slice_choice,
    _get_key,
    is_extension,
    get_extension_value,
    push_extension,
    validate_fixed_value,
    validate_required,
    validate_slice_cardinality,
)


class UscoreRaceExtension:
    """Concepts classifying the person into a named category of humans sharing common history, traits, geographical origin or nationality.  The race codes used to represent these concepts are based upon the [Race & Ethnicity - CDC (CDCREC)](https://phinvads.cdc.gov/vads/ViewCodeSystem.action?id=2.16.840.1.113883.6.238) which includes over 900 concepts for representing race and ethnicity of which 921 reference race.  The race concepts are grouped by and pre-mapped to the 5 OMB race categories:

 - American Indian or Alaska Native
 - Asian
 - Black or African American
 - Native Hawaiian or Other Pacific Islander
 - White.

    CanonicalURL: http://hl7.org/fhir/us/core/StructureDefinition/us-core-race
    """

    canonical_url: str = "http://hl7.org/fhir/us/core/StructureDefinition/us-core-race"

    _omb_category_slice_match: dict = {"url":"ombCategory"}
    _detailed_slice_match: dict = {"url":"detailed"}
    _text_slice_match: dict = {"url":"text"}

    def __init__(self, resource: Extension) -> None:
        self._resource = resource

    @classmethod
    def from_resource(cls, resource: Extension) -> "UscoreRaceExtension":
        profile = cls(resource)
        result = profile.validate()
        if result["errors"]:
            raise ValueError("; ".join(result["errors"]))
        return profile

    @classmethod
    def apply(cls, resource: Extension) -> "UscoreRaceExtension":
        return cls(resource)

    @classmethod
    def create_resource(cls, *, extension: list[Extension] | None = None) -> Extension:
        extension_with_defaults = ensure_slice_defaults(list(extension or []), cls._text_slice_match)

        return build_resource(Extension, url="http://hl7.org/fhir/us/core/StructureDefinition/us-core-race", extension=extension_with_defaults)

    @classmethod
    def create(cls, *, extension: list[Extension] | None = None) -> "UscoreRaceExtension":
        return cls.apply(cls.create_resource(extension=extension))

    def to_resource(self) -> Extension:
        return self._resource

    def get_extension(self) -> list[Extension] | None:
        return getattr(self._resource, "extension", None)

    def set_extension(self, value: list[Extension]) -> "UscoreRaceExtension":
        setattr(self._resource, "extension", value)
        return self

    def get_url(self) -> str | None:
        return getattr(self._resource, "url", None)

    def set_url(self, value: str) -> "UscoreRaceExtension":
        setattr(self._resource, "url", value)
        return self

    @overload
    def get_omb_category(self) -> dict | None: ...
    @overload
    def get_omb_category(self, mode: Literal["raw"]) -> Extension | None: ...
    def get_omb_category(self, mode: Literal["raw"] | None = None) -> dict | Extension | None:
        exts = getattr(self._resource, "extension", None) or []
        ext = next((e for e in exts if is_extension(e, "ombCategory")), None)
        if ext is None:
            return None
        if mode == "raw":
            return ext if not isinstance(ext, dict) else Extension(**ext)
        return ext if isinstance(ext, dict) else ext.model_dump(by_alias=True, exclude_none=True)

    def set_omb_category(self, value: "Extension | dict") -> "UscoreRaceExtension":
        if is_extension(value):
            if _get_key(value, "url") != "ombCategory":
                raise ValueError(f"Expected extension url 'ombCategory', got {_get_key(value, 'url')!r}")
            push_extension(self._resource, value)
        else:
            push_extension(self._resource, {"url": "ombCategory", **value})
        return self

    @overload
    def get_detailed(self) -> dict | None: ...
    @overload
    def get_detailed(self, mode: Literal["raw"]) -> Extension | None: ...
    def get_detailed(self, mode: Literal["raw"] | None = None) -> dict | Extension | None:
        exts = getattr(self._resource, "extension", None) or []
        ext = next((e for e in exts if is_extension(e, "detailed")), None)
        if ext is None:
            return None
        if mode == "raw":
            return ext if not isinstance(ext, dict) else Extension(**ext)
        return ext if isinstance(ext, dict) else ext.model_dump(by_alias=True, exclude_none=True)

    def set_detailed(self, value: "Extension | dict") -> "UscoreRaceExtension":
        if is_extension(value):
            if _get_key(value, "url") != "detailed":
                raise ValueError(f"Expected extension url 'detailed', got {_get_key(value, 'url')!r}")
            push_extension(self._resource, value)
        else:
            push_extension(self._resource, {"url": "detailed", **value})
        return self

    @overload
    def get_text(self) -> dict | None: ...
    @overload
    def get_text(self, mode: Literal["raw"]) -> Extension | None: ...
    def get_text(self, mode: Literal["raw"] | None = None) -> dict | Extension | None:
        exts = getattr(self._resource, "extension", None) or []
        ext = next((e for e in exts if is_extension(e, "text")), None)
        if ext is None:
            return None
        if mode == "raw":
            return ext if not isinstance(ext, dict) else Extension(**ext)
        return ext if isinstance(ext, dict) else ext.model_dump(by_alias=True, exclude_none=True)

    def set_text(self, value: "Extension | dict") -> "UscoreRaceExtension":
        if is_extension(value):
            if _get_key(value, "url") != "text":
                raise ValueError(f"Expected extension url 'text', got {_get_key(value, 'url')!r}")
            push_extension(self._resource, value)
        else:
            push_extension(self._resource, {"url": "text", **value})
        return self

    def get_extension_omb_category(self, mode: str | None = None) -> Any | None:
        match = self.__class__._omb_category_slice_match
        item = get_array_slice(getattr(self._resource, "extension", None), match)
        if item is None:
            return None
        if mode == "raw":
            return item
        item_dict = item if isinstance(item, dict) else item.model_dump(by_alias=True, exclude_none=True)
        return unwrap_slice_choice(item_dict, ["url"], "valueCoding")

    def get_extension_detailed(self, mode: str | None = None) -> Any | None:
        match = self.__class__._detailed_slice_match
        item = get_array_slice(getattr(self._resource, "extension", None), match)
        if item is None:
            return None
        if mode == "raw":
            return item
        item_dict = item if isinstance(item, dict) else item.model_dump(by_alias=True, exclude_none=True)
        return unwrap_slice_choice(item_dict, ["url"], "valueCoding")

    def get_extension_text(self, mode: str | None = None) -> Any | None:
        match = self.__class__._text_slice_match
        item = get_array_slice(getattr(self._resource, "extension", None), match)
        if item is None:
            return None
        if mode == "raw":
            return item
        item_dict = item if isinstance(item, dict) else item.model_dump(by_alias=True, exclude_none=True)
        return strip_match_keys(item_dict, ["url"])

    def set_extension_omb_category(self, value: dict | None = None) -> "UscoreRaceExtension":
        match = self.__class__._omb_category_slice_match
        wrapped = wrap_slice_choice((value or {}), "valueCoding")
        merged = apply_slice_match(wrapped, match)
        merged = Extension(**merged)
        items = getattr(self._resource, "extension", None) or []
        set_array_slice(items, match, merged)
        setattr(self._resource, "extension", items)
        return self

    def set_extension_detailed(self, value: dict | None = None) -> "UscoreRaceExtension":
        match = self.__class__._detailed_slice_match
        wrapped = wrap_slice_choice((value or {}), "valueCoding")
        merged = apply_slice_match(wrapped, match)
        merged = Extension(**merged)
        items = getattr(self._resource, "extension", None) or []
        set_array_slice(items, match, merged)
        setattr(self._resource, "extension", items)
        return self

    def set_extension_text(self, value: dict | None = None) -> "UscoreRaceExtension":
        match = self.__class__._text_slice_match
        merged = apply_slice_match((value or {}), match)
        merged = Extension(**merged)
        items = getattr(self._resource, "extension", None) or []
        set_array_slice(items, match, merged)
        setattr(self._resource, "extension", items)
        return self

    def validate(self) -> dict[str, list[str]]:
        profile_name = "UscoreRaceExtension"
        errors: list[str] = []
        warnings: list[str] = []
        errors.extend(validate_required(self._resource, profile_name, "extension"))
        errors.extend(validate_slice_cardinality(self._resource, profile_name, "extension", {"url":"ombCategory"}, "ombCategory", 0, 6))
        errors.extend(validate_slice_cardinality(self._resource, profile_name, "extension", {"url":"text"}, "text", 1, 1))
        errors.extend(validate_required(self._resource, profile_name, "url"))
        errors.extend(validate_fixed_value(self._resource, profile_name, "url", "http://hl7.org/fhir/us/core/StructureDefinition/us-core-race"))
        return {"errors": errors, "warnings": warnings}

"
`;

exports[`Python US Core Example generates US Core profiles index 1`] = `
"# WARNING: This file is autogenerated by @atomic-ehr/codegen.
# GitHub: https://github.com/atomic-ehr/codegen
# Any manual changes made to this file may be overwritten.

from .observation_uscore_blood_pressure_profile import UscoreBloodPressureProfile
from .observation_uscore_body_weight_profile import UscoreBodyWeightProfile
from .extension_uscore_ethnicity_extension import UscoreEthnicityExtension
from .extension_uscore_individual_sex_extension import UscoreIndividualSexExtension
from .extension_uscore_interpreter_needed_extension import UscoreInterpreterNeededExtension
from .patient_uscore_patient_profile import UscorePatientProfile
from .extension_uscore_race_extension import UscoreRaceExtension
from .extension_uscore_tribal_affiliation_extension import UscoreTribalAffiliationExtension
from .observation_uscore_vital_signs_profile import UscoreVitalSignsProfile
"
`;
